# 8V42_Bogomolov_lab1_sem3

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
